# mc-voice-spells

./: .gitignore  .gitmodules  LICENSE  NATIVE_LIBRARY_FIX_SUMMARY.md  README.md  build.gradle  build.sh  build_native.sh  gradle.properties  native_library_test.sh  settings.gradle  yellspells.bundle
api/: README.md  build.gradle  gradle.properties
api/src/main/java/io/github/freshsupasulley/censorcraft/api/: CensorCraftClientAPI.java  CensorCraftPlugin.java  CensorCraftServerAPI.java  ForgeCensorCraftPlugin.java
api/src/main/java/io/github/freshsupasulley/censorcraft/api/events/: Event.java  EventRegistration.java
api/src/main/java/io/github/freshsupasulley/censorcraft/api/events/client/: ClientAcknowledgePunish.java  ClientEvent.java  SendTranscriptionEvent.java
api/src/main/java/io/github/freshsupasulley/censorcraft/api/events/server/: PunishEvent.java  ServerConfigEvent.java  ServerEvent.java
api/src/main/java/io/github/freshsupasulley/censorcraft/api/punishments/: Punishment.java  Trie.java
common/: .gitignore  README.md  build.gradle
common/src/main/java/io/github/freshsupasulley/: DebugLogger.java  JScribe.java  Model.java  ModelDownloader.java  RollingAudioBuffer.java  Transcriber.java  Transcriptions.java
common/src/main/java/io/github/freshsupasulley/plugins/: EventHandler.java
common/src/main/java/io/github/freshsupasulley/plugins/impl/: CensorCraftClientAPIImpl.java  CensorCraftServerAPIImpl.java  EventImpl.java
common/src/main/java/io/github/freshsupasulley/plugins/impl/client/: ClientAcknowledgePunishImpl.java  ClientEventImpl.java  SendTranscriptionImpl.java
common/src/main/java/io/github/freshsupasulley/plugins/impl/server/: PunishEventImpl.java  ServerConfigEventImpl.java  ServerEventImpl.java
common/src/main/java/io/github/freshsupasulley/tarsos/: FilterKit.java  RateTransposer.java  Resampler.java  SampleBuffers.java
common/src/test/java/io/github/freshsupasulley/: JScribeTest.java
common/src/test/resources/: README.md
forge/: README.md  build.gradle
forge/src/main/java/io/github/freshsupasulley/censorcraft/: CensorCraft.java  CensorCraftAPIImpl.java  CensorCraftVC.java  ClientCensorCraft.java
forge/src/main/java/io/github/freshsupasulley/censorcraft/config/: ClientConfig.java  ConfigFile.java  ServerConfig.java
forge/src/main/java/io/github/freshsupasulley/censorcraft/config/punishments/: Commands.java  Crash.java  Dimension.java  Entities.java  Explosion.java  ForgePunishment.java  Ignite.java  Kill.java  Lightning.java  MobEffects.java  Teleport.java
forge/src/main/java/io/github/freshsupasulley/censorcraft/gui/: ConfigScreen.java  DownloadScreen.java  ScrollArea.java
forge/src/main/java/io/github/freshsupasulley/censorcraft/mixins/: GUIMixin.java
forge/src/main/java/io/github/freshsupasulley/censorcraft/network/: IPacket.java  Participant.java  PunishedPacket.java  SetupPacket.java  WordPacket.java
forge/src/main/resources/: .gitignore  censorcraft.mixins.json
forge/src/test/java/forge/: SanityTests.java
forge/src/test/resources/: censorcraft.pxi
src/main/java/com/yellspells/: YellSpellsMod.java
src/main/java/com/yellspells/client/: YellSpellsClientMod.java
src/main/java/com/yellspells/client/audio/: AudioBuffer.java  AudioProcessor.java  AudioResampler.java  SVCAudioIntegration.java  VoiceActivityDetector.java
src/main/java/com/yellspells/client/gui/: ModelDownloadScreen.java
src/main/java/com/yellspells/client/hud/: SpellHUD.java
src/main/java/com/yellspells/client/net/: ClientSender.java
src/main/java/com/yellspells/client/stt/: ModelManager.java  SpeechToTextManager.java  SpellDetector.java  WhisperJNI.java
src/main/java/com/yellspells/commands/: CastCommand.java  ReloadCommand.java
src/main/java/com/yellspells/config/: YellSpellsConfig.java
src/main/java/com/yellspells/network/: YellSpellsNetworking.java
src/main/java/com/yellspells/network/packets/: CastIntentPacket.java  SessionKeyPacket.java
src/main/java/com/yellspells/spells/: FireballSpell.java  HealSpell.java  LightningSpell.java  ShieldSpell.java  SpellManager.java
src/main/native/: CMakeLists.txt  whisper_jni.h
src/main/native/cpp/: yellspells_whisper.cpp
src/main/resources/: fabric.mod.json  yellspells.mixins.json
src/main/resources/natives/macos/: libggml-base.dylib  libggml-blas.dylib  libggml-cpu.dylib  libggml-metal.dylib  libggml.dylib  libwhisper.1.dylib  libyellspells_whisper.dylib  yellspells_whisper.dylib
